# TEProf2-for-ragweed

./: .gitignore  IMPLEMENTATION_CHECKLIST.md  PERFORMANCE_OPTIMIZATION.md  README.md  README_v2.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  SOLVING_ERRORS.md  pyproject.toml
examples/: POPULATION_WORKFLOW_GUIDE.md  QUICK_REFERENCE.md  ambrosia_workflow.py  batch_ambrosia_population.py  build_te_reference_v2.sh
scripts/: inspect_gencode_dict.py
src/teprof2/: __init__.py
src/teprof2/annotation/: __init__.py  te_annotator.py
src/teprof2/cli/: annotate.py  quantify.py
src/teprof2/core/: __init__.py  genome_interval.py
src/teprof2/quantification/: __init__.py  tpm_calculator.py
